--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Assignment solution for module2</title>
+	<meta name="viewport" content="width=devide-width,intial-scale=1">
+	<link rel="stylesheet" type="text/css" href="solutionstyle.css">
+</head>
+<body>
+	<h1>Our Menu</h1>
+	<section class="column-lg-4 colmn-md-6 colmn-sm-12">
+		<div>
+			<p class="sub1">Chicken</p>
+			<p class="content">
+			 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas luctus nulla sed enim suscipit, ut pulvinar nunc finibus. In lobortis sollicitudin ligula ut semper. Donec at condimentum felis. Nulla vestibulum dignissim ipsum ut fringilla. Duis mollis, arcu sit amet maximus aliquam, augue est rhoncus dui, quis consectetur mauris nulla eget ex. Donec id massa gravida, eleifend nibh ultrices, rhoncus velit. Ut sit amet vestibulum est. Curabitur posuere nunc enim, at cursus metus facilisis sit amet.
+			</p>
+		</div>
+	</section>
+	<section class="column-lg-4 colmn-md-6 colmn-sm-12">
+		<div>
+			<p class="sub2">Beef</p>
+			<p class="content">Vivamus nec felis luctus, semper dui eu, ultrices risus. Nulla facilisi. Vivamus luctus a sem et efficitur. Ut eu egestas neque. Duis congue magna est, non vehicula mi faucibus eu. Sed blandit, diam non dictum ultrices, neque quam facilisis tortor, nec pharetra quam orci vel tellus. In hac habitasse platea dictumst. Nunc at enim tincidunt, viverra leo eget, sollicitudin nulla. Pellentesque arcu ex, aliquam vitae tempor non, volutpat non leo. Fusce tincidunt sem eu dolor pellentesque, eu ullamcorper purus dignissim.</p>
+		</div>
+	</section>
+	<section class="column-lg-4 colmn-md-6 colmn-sm-12">
+	<div>
+		<p class="sub3">Sushi</p>
+			<p class="content">Quisque nec est vel ante accumsan mattis sed a massa. Sed pulvinar, ligula vitae porttitor commodo, nisi velit commodo mauris, nec luctus nisl dolor a purus. Nam efficitur sit amet turpis in pharetra. Cras ipsum dolor, vestibulum eget augue sed, sodales tincidunt leo. Fusce sit amet nisl commodo, ultrices metus ultricies, feugiat ex. Phasellus luctus ultricies enim eu scelerisque. Praesent sagittis luctus felis vel venenatis. Nulla pellentesque orci ipsum, in egestas est suscipit eget. </p>
+	</div>
 
+</body>
+</html>
