--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Assignment solution for module2</title>
 	<meta name="viewport" content="width=devide-width,intial-scale=1">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="solutionstyle.css">
 </head>
 <body>
 	<h1>Our Menu</h1>
